--- a/trainmate-back/build.gradle
+++ b/trainmate-back/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	runtimeOnly 'org.hsqldb:hsqldb'
 	implementation 'org.hsqldb:sqltool:2.7.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 }
 
 tasks.named('test') {
